feat(event sourcing): implementar un sistema de Event Sourcing con nuevas entidades y eventos de dominio para la gestión de repositorios; agregar controladores para manejar eventos y estadísticas, mejorando la arquitectura del sistema y la interacción con la API de GitHub; actualizar pom.xml para incluir nuevas dependencias necesarias.